Fixed an issue that appeared on mobile devices.

--- a/newstyle.css
+++ b/newstyle.css
@@ -2,6 +2,14 @@
 *{
 	margin:0;
 }
+html,body
+{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x:hidden;
+}
 a,a:hover{
 	text-decoration:none;
 	margin:0;
@@ -22,7 +30,6 @@ footer, section:after{
 html{
 	width:100%;
 	height:100%;
-	overflow-x:hidden;
 	margin:0;
 	padding:0;
 }
@@ -38,8 +45,8 @@ svg{
 }
 .sample{
 	margin:0 auto;
-	width:600px;
-	height:325px;
+	max-width:600px;
+        height:325px;
 	margin-top:25px;
 	position:relative;
 }
@@ -86,7 +93,6 @@ button{
  }
 header{
  height:100%;
- max-width:1900px;
  margin:0 auto;
 -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -97,16 +103,22 @@ header{
  header a{
 	 font-family:Arial;
  }
- .square{
-	 height:325px;
-	 width:600px;
-	 background-size:cover;
+.square{
+   max-width:600px;
+   height:325px;
  }
+ 
  .square.steam{
 	 background: url(img/steam_small.png) no-repeat center center;
+         background-size:cover;
+         background-repeat:no-repeat;
+         background-position:center;
  }
  .square.portfolio{
 	 background: url(img/portfolio_small.png) no-repeat center center;
+         background-size:cover;
+         background-repeat:no-repeat;
+         background-position:center;
  }
  .square *:hover{
 	 cursor:pointer;
@@ -151,10 +163,11 @@ header{
 	 bottom:500px;
  }
  .container{
-     width:100%;
+     padding-top:15px;
+     width:200px;
+     height:75px;
      position:relative;
      top:43%;
-     left:43%;
  }
  #skills h1{
  text-align:center;
@@ -327,9 +340,6 @@ header{
 
 /* Landscape phones and portrait tablets */
 @media (max-width: 767px) {
-    .container{
-        left:36%;
-    }
 	footer .contact-information{
 		float:none;
 		width:100%;
@@ -343,6 +353,7 @@ header{
 		width:100%;
 		background-color:black;
 		border-bottom:1px solid #363636;
+                
 	}
 	footer .jump-to ul li{
 		font-size:1.3em;
